# whats

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  run.sh  test-debug.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
.vexp/: index.db  manifest.json
docs/: build-deb.md  build-linux.md
scripts/: build-deb.sh  release.sh
src/: App.tsx  buildInfoApi.ts  settingsApi.ts  styles.css  updateApi.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bundle/linux/: whats.desktop.hbs
src-tauri/capabilities/: default.json  whats.json
src-tauri/icons/: icon.icns
src-tauri/permissions/whats/: commands.toml
src-tauri/resources/: inject.js  inject.lib.js
src-tauri/src/: build_info.rs  ipc.rs  lib.rs  main.rs  notify.rs  settings.rs  title_parse.rs  tray.rs  updater.rs  windows.rs
src/main/: buildInfo.ts  index.ts  navigation.ts  notificationPolicy.ts  notifications.ts  reconnectOverlay.ts  reload.ts  settings.ts  titleParse.ts  tray.ts  updater.ts  windows.ts
src/preload/: index.ts  inject.ts  (+1 more)
tests/: buildInfo.test.ts  bundle-config.test.js  bundleConfig.test.ts  inject.test.js  inject.test.ts  navigation.test.ts  notificationPolicy.test.ts  notifications.test.ts  notificationsLazyLoad.test.ts  reload.test.ts  settings.test.ts  settingsView.test.tsx  test-mock.ts  titleParse.test.ts  tray.test.ts  updateView.test.tsx  updater.test.ts
(+19 files in other folders)
